--- a/mysql-read/索引/B树索引/查找算法分类.md
+++ b/mysql-read/索引/B树索引/查找算法分类.md
@@ -4,5 +4,4 @@
 - B+Tree 在范围查询方面提供了更好的性能(> < >= <= like)
 - B*Tree
 
-​           ![file://c:\users\firbird\appdata\local\temp\tmpsxpgis\1.png](file://c:\users\firbird\appdata\local\temp\tmpsxpgis\1.png)
-
+​           ![file://c:\users\firbird\appdata\local\temp\tmp7rklbx\1.png](https://i.loli.net/2020/08/06/N1wq6X9ihc7BxYp.png)
