--- a/mysql-read/索引/聚集索引.md
+++ b/mysql-read/索引/聚集索引.md
@@ -26,4 +26,4 @@
 
 ```
 
-​           ![file://c:\users\firbird\appdata\local\temp\tmpsxpgis\1.png](c:\users\firbird\appdata\local\temp\tmpsxpgis\1.png)
+​           ![file://c:\users\firbird\appdata\local\temp\tmpsxpgis\1.png](https://i.loli.net/2020/08/06/5A28dYfqOHBMgnD.png)
