--- a/mysql-shell/使用说明.md
+++ b/mysql-shell/使用说明.md
@@ -1,23 +1,42 @@
 ## 脚本 mysqldump.sh
 
-可详细看 脚本，内部有注释
+可详细 脚本，内部有注释
 
-先更改脚本  用户名、密码、参数
+必须设置：数据库USER、PASSWORD、DATANAME
 
-日志目录： LOGDIR=/backup/log
+日志目录： LOGDIR  默认： /backup/log
+
+PORT： 默认 3306
 
 ### 全库备份：
 
-参数： FULLDIR     备份目录：  /backup/dump/full
+参数： FULLDIR     备份目录 ：默认 /backup/dump/full
 
 ### 单库备份：
 
 参数 ： DATANAME 需要备份的库 必须设置
 
-​			 DATADIR     备份的目录： /backup/dump/base
+​			 DATADIR     备份的目录：默认 /backup/dump/base
 
 命令使用： 
 
-全库备份： mysqldump.sh  A
+​				  全库备份： mysqldump.sh  A
 
-单库备份： mysqldump.sh  B
+​			  	单库备份： mysqldump.sh  B
+
+## 脚本xtraback.sh
+
+可详细看脚本，内部有注释
+
+安装依赖包： yum -y install perl perl-devel libaio libaio-devel perl-Time-HiRes perl-DBD-MySQL libev
+
+RPM: https://www.percona.com/downloads/XtraBackup/Percona-XtraBackup-2.4.12/binary/redhat/7/x86_64/percona-xtrabackup-24-2.4.12-1.el7.x86_64.rpm
+
+必须设置：数据库USER、PASSWORD、SOCKET
+
+参数说明：
+
+BACKDIR ： 默认 /backup/innodb
+
+
+
